classDiagram
    class BracketMatch {
      +string id
      +int round
      +int match
      +string player1Id
      +string player2Id
      +string winnerId
      +MatchStatus status
      +string feedMatch1Id
      +string feedMatch2Id
      +BracketSide bracket
    }
    class TournamentBracket {
      +string tournamentId
      +int totalRounds
      +int totalPlayers
      +BracketMatch[][] bracket
      +int currentRound
      +bool isComplete
      +TournamentFormat format
      +int totalMatches
      +string[] byePlayers
    }
    class BracketGenerationOptions {
      +string tournamentId
      +PlayerSeed[] players
      +TournamentFormat tournamentType
      +bool randomizeSeeding
      +number seed
      +number swissRounds
    }
    class Engine {
      +generateSingleElimination(opts) TournamentBracket
      +generateDoubleElimination(opts) TournamentBracket
      +generateRoundRobin(opts) TournamentBracket
      +generateSwiss(opts) TournamentBracket
      +isPowerOfTwo(n) boolean
      +seededShuffle(items, seed) any[]
      +getRoundName(round, total) string
      +validateBracket(bracket) ValidationResult
      +projectBracket(matches) ProjectedState
    }
    class Persistence {
      +persistBracket(bracket) void
      +generateAndPersistBracket(opts) TournamentBracket
      +getBracketState(tournamentId) TournamentBracket
      +applyResult(matchId, winnerId, score) void
      +correctResult(matchId, winnerId, reason, cascade) CorrectionResult
      +clearDerivedDownstream(tournamentId, matchId) string[]
    }
    class BracketError {
      +string code
      +number statusCode
    }
    class TournamentBracketService {
      +generateBracket(options) TournamentBracket
      +generateAndPersistBracket(options) TournamentBracket
      +updateMatchResult(tournamentId, matchId, winnerId, score) void
      +correctMatchResult(tournamentId, matchId, winnerId, reason, cascade) void
      +getBracketState(tournamentId) TournamentBracket
    }
    class TournamentOrganizerGuard {
      +requireTournamentOrganizer(options?) RequestHandler
    }

    TournamentBracketService --> Engine : delegates generation
    TournamentBracketService --> Persistence : delegates writes/reads
    Persistence --> Engine : projectBracket
    Persistence ..> BracketError : throws
    TournamentBracketService ..> BracketError : re-exports
    TournamentBracketService --> TournamentOrganizerGuard : route-level guard
    BracketGenerationOptions --> TournamentBracket
    Engine --> BracketMatch
    TournamentBracket --> BracketMatch
